Correction contraste accessibilite

--- a/assets/style.css
+++ b/assets/style.css
@@ -90,9 +90,7 @@ body {
 	font-size: 14px;
 }
 
-#gallery {
-	/*	min-height: 100vh; */
-}
+
 .title{
 	text-align: center;
 	padding-block: 2em;
@@ -257,6 +255,14 @@ input[type="submit"] {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+	background-color: #000;
+	border-radius: 50%;
+	padding: 20px;
+	background-size: 50% 50%;
 }
 
 .nav-pills .nav-link.active,
